--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,42 @@ services:
     image: nginx
     container_name: "nginx_cont"
     ports:
-      - "80:80"
-    restart: always
+     - "80:80"
     depends_on:
       - django_app
+    restart: always
     networks:
-      - notes-app-nw
+     - notes-app
+
+  db:
+    image: mysql
+    container_name: "db_cont"
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE= devops
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 60s
+    networks:
+      - notes-app
 
   django_app:
     build:
       context: .
-    image: django_app
+    image: django-app
     container_name: "django_cont"
     ports:
-      - "8000:8000"
-    command: sh -c "python manage.py migrate --noinput && gunicorn notesapp.wsgi --bind 0.0.0.0:8000"
+     - "8000:8000"
+    command:  sh -c "python manage.py migrate --noinput && gunicorn notesapp.wsgi --bind 0.0.0.0:8000"
     env_file:
-      - ".env"
+     - ".env"
     depends_on:
       - db
     restart: always
@@ -33,24 +52,9 @@ services:
       retries: 5
       start_period: 30s
     networks:
-      - notes-app-nw
-
-  db:
-    image: mysql
-    container_name: "db_cont"
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=test_db
-    volumes:
-      - ./data/mysql/db:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 60s
-    networks:
-      - notes-app-nw
+      - notes-app 
 
 networks:
-  notes-app-nw:
+  notes-app:
+volumes:
+  mysql_data:
